fixed a layout issue/final draft

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+* {
+    border: 1px solid teal;
+}
 
 :root {
     --pale-sage: #BFF4CB;
@@ -7,11 +10,39 @@
     --night-forest: #2F3E46;
 }  
 
-* {
-    border: 1px solid teal;
-}
 
-@media (min-width: 600px) {
+body {
+    margin: 0;
+    font-family: sans-serif;
+    text-align: center;
+    background-color: var(--night-forest);
+    color: var(--pale-sage);
+  }
+  
+  .container {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: space-between;
+}                  
+    main {
+      min-height: 60vh;
+      flex-grow: 5;
+    }
+  
+    aside,
+    nav {
+      background-color: var(--dusty-emerald);
+      flex-grow: 2;
+    }
+  
+    footer,
+    header {
+      background-color: var(--sage);
+      flex-grow: 1;
+    }
+    
+    @media (min-width: 600px) {
     .container {
       flex-direction: row;
       flex-wrap: wrap;
@@ -23,33 +54,4 @@
       width: 100%;
     }
   }                                  
-
-body {
-    margin: 0;
-    font-family: sans-serif;
-    text-align: center;
-    background-color: var(--night-forest);
-    color: var(--pale-sage);
-  }                                    
-.container {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-    justify-content: space-between;
-}                  
-main {
-    min-height: 60vh;
-    flex-grow: 5;
-  }
-  
-  aside, nav {
-    background-color: var(--dusty-emerald);
-    flex-grow: 2;
-  }
-  
-  footer, header {
-    background-color: var(--sage);
-    flex-grow: 1;
-  }                             
-  
 
